Update e-card with MD Samrat Hossain's information - Employee ID: RT25050102, Sr. Executive-Visa, Visa Department

--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Digital Business Card - Md. Nokib Uddin Nirob, Executive - Sales & Marketing">
+    <meta name="description" content="Digital Business Card - MD Samrat Hossain, Sr. Executive-Visa">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>E-Card - Md. Nokib Uddin Nirob</title>
+    <title>E-Card - MD Samrat Hossain</title>
     
     <!-- Favicon -->
     <link rel="icon" type="image/png" href="Photos/Rlogo.png">
@@ -41,27 +41,29 @@
                 <img src="Photos/RTTLOGO.png" alt="Company Logo" class="ecard-logo mb-3 d-block mx-auto animate-element" data-delay="100" width="200" height="auto" loading="eager">
                 <div class="ecard-profile-section d-flex align-items-center animate-element" data-delay="200">
                     <div class="ecard-photo-box me-3">
-                        <img src="Photos/employee.jpg" alt="Md. Nokib Uddin Nirob" class="ecard-photo-img animate-element" data-delay="300" width="80" height="80" loading="eager">
+                        <img src="Photos/employee.jpg" alt="MD Samrat Hossain" class="ecard-photo-img animate-element" data-delay="300" width="80" height="80" loading="eager">
                     </div>
                     <div class="ecard-name-title flex-grow-1">
-                        <h2 class="ecard-name animate-element" data-delay="400">Md. Nokib Uddin Nirob</h2>
-                        <div class="ecard-role animate-element" data-delay="500">Executive - Sales & Marketing</div>
-                        <div class="ecard-department animate-element" data-delay="600">Marketing Dpt</div>
+                        <h2 class="ecard-name animate-element" data-delay="400">MD Samrat Hossain</h2>
+                        <div class="ecard-role animate-element" data-delay="500">Sr. Executive-Visa</div>
+                        <div class="ecard-department animate-element" data-delay="600">Visa Department</div>
                     </div>
                 </div>
             </div>
 
             <div class="ecard-contact-box p-3 my-3 animate-element" data-delay="700">
-                <div class="ecard-contact mb-2 animate-element" data-delay="800"><i class="fas fa-phone-alt me-2"></i>Office: 01329-739734</div>
-                <div class="ecard-contact mb-2 animate-element" data-delay="850"><i class="fas fa-mobile-alt me-2"></i>Personal: 01931-807855</div>
-                <div class="ecard-contact animate-element" data-delay="900"><i class="fas fa-envelope me-2"></i>nokibnirob75@gmail.com</div>
+                <div class="ecard-employee-id animate-element" data-delay="750">ID: RT25050102</div>
+                <div class="ecard-contact mb-2 animate-element" data-delay="800"><i class="fas fa-phone-alt me-2"></i>Office: 01329739731</div>
+                <div class="ecard-contact mb-2 animate-element" data-delay="850"><i class="fas fa-mobile-alt me-2"></i>Personal: 01738738637</div>
+                <div class="ecard-contact animate-element" data-delay="900"><i class="fas fa-envelope me-2"></i>roamingbdvisa01@gmail.com</div>
             </div>
 
             <a href="#" class="ecard-save-btn btn-block my-3 text-center text-decoration-none animate-element" data-delay="1000" onclick="saveContact()"><i class="fas fa-download me-2"></i>Save this contact</a>
 
             <div class="ecard-social-row d-flex justify-content-center align-items-center my-3 animate-element" data-delay="1100">
-                <a href="https://www.linkedin.com/in/nokib-uddin-nirob-468287326?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=ios_app" target="_blank" class="ecard-social-btn animate-element" data-delay="1200"><i class="fab fa-linkedin"></i></a>
-                <a href="#" onclick="openWhatsApp()" class="ecard-social-btn animate-element" data-delay="1250"><i class="fab fa-whatsapp"></i></a>
+                <a href="https://www.linkedin.com/in/asad-samrat-2b042a358?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app" target="_blank" class="ecard-social-btn animate-element" data-delay="1200"><i class="fab fa-linkedin"></i></a>
+                <a href="https://www.facebook.com/" target="_blank" class="ecard-social-btn animate-element" data-delay="1250"><i class="fab fa-facebook"></i></a>
+                <a href="#" onclick="openWhatsApp()" class="ecard-social-btn animate-element" data-delay="1300"><i class="fab fa-whatsapp"></i></a>
             </div>
 
             <div class="ecard-footer-box text-center mt-auto animate-element" data-delay="1400">
