"feat: Implement dark mode improvements and design refinements"

--- a/index.html
+++ b/index.html
@@ -40,49 +40,91 @@
         <div class="ecard-main-card p-4">
             <div class="ecard-top mb-3 animate-element" data-delay="0">
                 <div class="ecard-profile-section text-center animate-element" data-delay="200">
-                    <div class="ecard-logo-container mb-3">
-                        <a href="https://blackrock-bd.com/" target="_blank"><img src="Photos/Black-Rock Logo.png" alt="Black-Rock Logo" class="ecard-logo animate-element" data-delay="250"></a>
-                        <a href="https://derbana.com/" target="_blank"><img src="Photos/Derbana Logo.png" alt="Derbana Logo" class="ecard-logo animate-element" data-delay="300"></a>
+                    <div class="ecard-logo-container">
+                        <img src="Photos/Derbana Logo.png" alt="Derbana Logo" class="ecard-logo animate-element" data-delay="250">
+                        <img src="Photos/Black-Rock Logo.png" alt="Black-Rock Logo" class="ecard-logo animate-element" data-delay="250">
                     </div>
                     <div class="ecard-photo-box mb-3">
-                        <img src="Photos/photo.jpg" alt="S M Moniruzzaman" class="ecard-photo-img animate-element" data-delay="350" width="150" height="150" loading="eager">
+                        <img src="Photos/photo.jpg" alt="S M Moniruzzaman" class="ecard-photo-img animate-element" data-delay="300" width="150" height="150" loading="eager">
                     </div>
-                    <h2 class="ecard-name animate-element" data-delay="400">S M Moniruzzaman</h2>
+                    <h2 class="ecard-name animate-element" data-delay="350">S M Moniruzzaman</h2>
+                    <p class="ecard-title animate-element" data-delay="400">CEO</p>
                 </div>
             </div>
 
             <div class="ecard-contact-box p-3 my-3 animate-element" data-delay="700">
-                <div class="ecard-contact mb-2 animate-element" data-delay="800"><i class="fas fa-mobile-alt me-2"></i><a href="tel:+8801329739728">Mobile: 01329-739728</a></div>
-                <div class="ecard-contact mb-2 animate-element" data-delay="850"><i class="fas fa-phone-alt me-2"></i><a href="tel:+15052345706">USA Number: +1 (505) 234-5706</a></div>
-                <div class="ecard-contact mb-2 animate-element" data-delay="900"><i class="fas fa-envelope me-2"></i><a href="mailto:ceo@blackrock-bd.com">ceo@blackrock-bd.com</a></div>
-                <div class="ecard-contact animate-element" data-delay="950"><i class="fas fa-envelope me-2"></i><a href="mailto:ceo@derbana.com">ceo@derbana.com</a></div>
-            </div>
-
-            <div class="ecard-address-box">
-                <div class="address-container">
-                    <div class="address-item">
-                        <span class="address-title">BD Office Location <i class="fas fa-building"></i></span>
-                        <div class="address-details">Niloy, House-25 (2nd Floor), Road-02, Sector-03, opposite of Shopno, Rajlokkhi, Uttara, Dhaka, Bangladesh</div>
+                <div class="ecard-contact-item animate-element" data-delay="750">
+                    <a href="tel:+8801329739728">
+                        <i class="fas fa-phone me-2"></i>
+                        <span>+8801329-739728</span>
+                    </a>
+                </div>
+                <div class="ecard-contact-item animate-element" data-delay="800">
+                    <a href="tel:+15052345706">
+                        <i class="fas fa-phone me-2"></i>
+                        <span>+1 (505) 234-5706 (USA)</span>
+                    </a>
+                </div>
+                <div class="ecard-contact-item animate-element" data-delay="850">
+                    <a href="mailto:ceo@blackrock-bd.com">
+                        <i class="fas fa-envelope me-2"></i>
+                        <span>ceo@blackrock-bd.com</span>
+                    </a>
+                </div>
+                <div class="ecard-contact-item animate-element" data-delay="900">
+                    <a href="mailto:ceo@derbana.com">
+                        <i class="fas fa-envelope me-2"></i>
+                        <span>ceo@derbana.com</span>
+                    </a>
+                </div>
+                <div class="ecard-contact-item animate-element" data-delay="950">
+                    <a href="https://blackrock-bd.com/" target="_blank">
+                        <i class="fas fa-globe me-2"></i>
+                        <span>Blackrock Website</span>
+                    </a>
+                </div>
+                <div class="ecard-contact-item animate-element" data-delay="1000">
+                    <a href="https://derbana.com/" target="_blank">
+                        <i class="fas fa-globe me-2"></i>
+                        <span>Derbana Website</span>
+                    </a>
+                </div>
+                <div class="ecard-contact-item animate-element" data-delay="1050">
+                    <a href="#" class="ecard-address-toggle">
+                        <i class="fas fa-map-marker-alt me-2"></i>
+                        <span>BD Office Location</span>
+                    </a>
+                    <div class="ecard-address-details" style="display: none;">
+                        <p>Niloy, House-25 (2nd Floor), Road-02, Sector-03, opposite of Shopno, Rajlokkhi, Uttara, Dhaka, Bangladesh</p>
                     </div>
-
-                    <div class="address-item">
-                        <span class="address-title">Factory <i class="fas fa-industry"></i></span>
-                        <div class="address-details">House: 2084, Suite: 2a, Level: 02, Ward: 16, Malancha,shakta, Holding: 2084, Road: 06, Zianagar, Madrasa Road, Malancha, Dhaka-1312, Bangladesh</div>
+                </div>
+                <div class="ecard-contact-item animate-element" data-delay="1100">
+                    <a href="#" class="ecard-address-toggle">
+                        <i class="fas fa-map-marker-alt me-2"></i>
+                        <span>Factory Address</span>
+                    </a>
+                    <div class="ecard-address-details" style="display: none;">
+                        <p>House: 2084, Suite: 2a, Level: 02, Ward: 16, Malancha,shakta, Holding: 2084, Road: 06, Zianagar, Madrasa Road, Malancha, Dhaka-1312, Bangladesh.</p>
                     </div>
-
-                    <div class="address-item">
-                        <span class="address-title">Darbana USA Office <i class="fas fa-globe-americas"></i></span>
-                        <div class="address-details">8206 Louisiana Blvd Ne, Ste A #6795, Albuquerque, New Mexico 87113 USA</div>
+                </div>
+                <div class="ecard-contact-item animate-element" data-delay="1150">
+                    <a href="#" class="ecard-address-toggle">
+                        <i class="fas fa-map-marker-alt me-2"></i>
+                        <span>Darbana USA Office</span>
+                    </a>
+                    <div class="ecard-address-details" style="display: none;">
+                        <p>8206 Louisiana Blvd Ne, Ste A #6795, Albuquerque, New Mexico 87113 USA.</p>
                     </div>
                 </div>
             </div>
 
-            <div class="ecard-website-box p-3 my-3 animate-element" data-delay="1350">
-                <div class="ecard-website mb-2 animate-element" data-delay="1400"><i class="fas fa-globe me-2"></i><a href="https://blackrock-bd.com/" target="_blank">blackrock-bd.com</a></div>
-                <div class="ecard-website animate-element" data-delay="1450"><i class="fas fa-globe me-2"></i><a href="https://derbana.com/" target="_blank">derbana.com</a></div>
+            <div class="ecard-save-btn-container text-center mt-3 animate-element" data-delay="1200">
+                <button id="saveContactBtn" class="ecard-save-btn btn btn-primary w-100">Save Contact</button>
             </div>
 
-            <a href="#" class="ecard-save-btn btn-block my-3 text-center text-decoration-none animate-element" data-delay="1000" onclick="saveContact()"><i class="fas fa-download me-2"></i>Save e.card</a>
+
+
+
 
             <div class="ecard-footer-box text-center mt-auto animate-element" data-delay="1500">
                 <!-- Optional: Add a small footer text here if needed -->
@@ -91,7 +133,7 @@
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" defer></script>
-    <script src="https://cdn.jsdelivr.net/npm/qrcode@1.5.3/build/qrcode.min.js" defer></script>
+
     
     <!-- Custom JavaScript -->
     <script src="./ecard.js" defer></script>
